--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <a href="#homepage">Homepage</a>
   </li>
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
-    <a href="#about">About</a>
+    <a href="about-us.html">About</a>
   </li>
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
     <a href="#services">Services</a>
@@ -133,125 +133,6 @@
     </div>
   </section>
 
-  <!-- About Section with Career Timeline -->
-  <!-- About Section -->
-<section id="about" class="bg-gray-50 dark:bg-gray-800 py-24 px-10">
-  <style>
-    /* 👇 Scoped typography: applies only to paragraph text inside #about */
-    #about p {
-      @apply text-[13px] md:text-[16px] text-gray-700 dark:text-gray-300 leading-relaxed;
-    }
-  </style>
-
-  <div class="container mx-auto flex flex-col lg:flex-row items-center gap-16">
-    <!-- Profile -->
-    <div class="relative w-full lg:w-1/3 flex justify-center">
-      <div class="relative w-64 h-64 rounded-full overflow-hidden shadow-2xl border-4 border-indigo-500">
-        <img src="./images/profile.jpg" alt="Moses Portrait" class="w-full h-full object-cover" />
-      </div>
-    </div>
-
-    <!-- About Text -->
-    <div class="w-full lg:w-2/3 text-center lg:text-left">
-      <h1 class="text-indigo-600 font-bold uppercase tracking-wide">About Me</h1>
-      <h2 class="text-4xl font-extrabold text-gray-900 dark:text-white mt-2">Moses Odhiambo</h2>
-
-      <p class="mt-4">
-        I am a passionate <span class="font-semibold text-indigo-600">Business and Information Technology Professional</span>
-        with hands-on experience in <strong>front-end web development</strong>, <strong>networking</strong>, and
-        <strong>IT operations</strong>. I thrive on creating elegant, responsive web experiences that bridge business goals
-        and modern technology.
-      </p>
-
-      <p class="mt-4">
-        I’ve interned at <strong>Ryanada Ltd (Truehost Cloud)</strong>, <strong>Softlink Options Ltd</strong>, and
-        <strong>USIU Africa</strong>, gaining expertise in web hosting, SEO optimization, and cloud-based systems.
-        Currently, I’m advancing my skills in <strong>Full Stack Development at Zindua Coding School</strong> using
-        <strong>React</strong>, <strong>Tailwind CSS</strong>, and <strong>PHP</strong>.
-      </p>
-
-      <p class="mt-4">
-        My technical toolkit includes HTML5, CSS3, JavaScript, React.js, Tailwind CSS, Bootstrap, PHP, and WordPress.
-        I also have a background in networking and UI/UX design using Figma.
-      </p>
-
-      <!-- Skills -->
-      <div class="flex flex-wrap justify-center lg:justify-start gap-3 mt-6">
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">HTML5</span>
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">CSS3</span>
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">JavaScript</span>
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">React.js</span>
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">Tailwind</span>
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">Bootstrap</span>
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">PHP</span>
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">UI/UX (Figma)</span>
-        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-medium">Networking</span>
-      </div>
-
-      <!-- Button -->
-      <div class="mt-10">
-        <a href="#contact"
-          class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-full font-semibold text-lg transition hover:bg-indigo-700">
-          Let's Connect
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Career Timeline -->
-  <div class="mt-20 max-w-5xl mx-auto">
-    <h3 class="text-2xl font-bold text-center text-indigo-600 mb-10">Career Timeline</h3>
-
-    <div class="relative border-l-4 border-indigo-500 ml-4">
-      <!-- Timeline Item 1 -->
-      <div class="mb-10 ml-6">
-        <div class="absolute -left-3.5 mt-1.5 w-7 h-7 bg-indigo-500 rounded-full border-4 border-white"></div>
-        <h4 class="text-xl font-semibold text-gray-900 dark:text-white">ICT Intern – Ryanada Ltd (Truehost Cloud)</h4>
-        <span class="text-sm text-gray-500">May 2023 – Sept 2024</span>
-        <p class="mt-2">
-          Assisted in server setup, website troubleshooting, and domain management. Supported new domain rollouts and
-          technical support.
-        </p>
-      </div>
-
-      <!-- Timeline Item 2 -->
-      <div class="mb-10 ml-6">
-        <div class="absolute -left-3.5 mt-1.5 w-7 h-7 bg-indigo-500 rounded-full border-4 border-white"></div>
-        <h4 class="text-xl font-semibold text-gray-900 dark:text-white">ICT Intern – Softlink Options Ltd (Remote)</h4>
-        <span class="text-sm text-gray-500">May 2023 – July 2023</span>
-        <p class="mt-2">
-          Oversaw SEO optimization and remote CMS administration for multiple client sites while offering remote
-          helpdesk support.
-        </p>
-      </div>
-
-      <!-- Timeline Item 3 -->
-      <div class="mb-10 ml-6">
-        <div class="absolute -left-3.5 mt-1.5 w-7 h-7 bg-indigo-500 rounded-full border-4 border-white"></div>
-        <h4 class="text-xl font-semibold text-gray-900 dark:text-white">ICT Attaché – USIU-Africa</h4>
-        <span class="text-sm text-gray-500">May 2022 – Aug 2022</span>
-        <p class="mt-2">
-          Installed and configured IT systems, maintained networks, and provided technical support and data backup
-          assistance.
-        </p>
-      </div>
-
-      <!-- Timeline Item 4 -->
-      <div class="mb-10 ml-6">
-        <div class="absolute -left-3.5 mt-1.5 w-7 h-7 bg-indigo-500 rounded-full border-4 border-white"></div>
-        <h4 class="text-xl font-semibold text-gray-900 dark:text-white">Education – JKUAT</h4>
-        <span class="text-sm text-gray-500">Sept 2019 – Apr 2023</span>
-        <p class="mt-2">
-          Bachelor of Business Information Technology, Second Class Upper Division.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-  <!-- (Keep your Services, Portfolio, and Contact Sections as they are below) -->
-  <!-- ... -->
   <!-- Services Section -->
   <section id="services" class="bg-gray-100 py-20 px-10">
     <div class="container mx-auto text-center mb-10">
@@ -334,7 +215,10 @@
           class="p-3 w-full ring-1 ring-indigo-300 rounded-md" rows="5" placeholder="Message..."></textarea> <button
           class="bg-indigo-600 text-white text-lg px-6 py-2 rounded-md font-semibold w-fit cursor-pointer hover:bg-indigo-700"
           type="submit"> Send Message </button> </form>
+          <!-- ✅ Footer -->
+    <footer class="bg-indigo-700 text-white py-6 text-center mt-20">
+      <p>&copy; 2025 Moses Odhiambo. All rights reserved.</p>
+    </footer>
       <script src="./app.js"></script>
 </body>
-
 </html>
