--- a/about-us.html
+++ b/about-us.html
@@ -30,10 +30,12 @@
 
   <body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-100">
     <!-- ✅ Navbar -->
+    <!-- Navbar -->
     <nav class="w-full bg-indigo-700 shadow-lg fixed top-0 left-0 z-50">
       <div
         class="container mx-auto py-5 flex justify-between items-center px-4 text-white"
       >
+        <!-- Logo -->
         <a
           href="index.html#homepage"
           class="flex items-center gap-2 hover:opacity-80 transition"
@@ -46,33 +48,53 @@
           <span class="text-2xl font-bold">Portfolio</span>
         </a>
 
-        <ul class="hidden md:flex space-x-10 font-medium">
-          <li>
-            <a href="index.html#homepage" class="hover:text-indigo-200"
-              >Homepage</a
-            >
+        <!-- Menu -->
+        <ul
+          id="menu"
+          class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 py-4 md:py-0 transition-all duration-300 ease-in-out"
+        >
+          <li
+            class="hLink hover:text-indigo-200 transition-colors duration-200"
+          >
+            <a href="index.html#homepage">Homepage</a>
           </li>
-          <li>
-            <a
-              href="about-us.html"
-              class="hover:text-indigo-200 text-indigo-300 font-semibold"
-              >About</a
-            >
+
+          <li
+            class="hLink hover:text-indigo-200 transition-colors duration-200"
+          >
+            <a href="about-us.html">About</a>
           </li>
-          <li>
-            <a href="index.html#services" class="hover:text-indigo-200"
-              >Services</a
-            >
+
+          <li
+            class="hLink hover:text-indigo-200 transition-colors duration-200"
+          >
+            <a href="index.html#services">Services</a>
           </li>
-          <li>
-            <a href="index.html#works" class="hover:text-indigo-200">Works</a>
+
+          <li
+            class="hLink hover:text-indigo-200 transition-colors duration-200"
+          >
+            <a href="works.html">Works</a>
           </li>
-          <li>
-            <a href="index.html#contact" class="hover:text-indigo-200"
-              >Contact</a
-            >
+
+          <li
+            class="hLink hover:text-indigo-200 transition-colors duration-200"
+          >
+            <a href="index.html#contact">Contact</a>
           </li>
         </ul>
+
+        <!-- Dark Mode Toggle -->
+        <button id="moon" class="hidden md:block text-white text-xl">
+          <i class="fa-solid fa-moon"></i>
+        </button>
+
+        <!-- Hamburger Icon -->
+        <div id="hamburger" class="space-y-1 cursor-pointer md:hidden">
+          <div class="w-6 h-0.5 bg-white"></div>
+          <div class="w-6 h-0.5 bg-white"></div>
+          <div class="w-6 h-0.5 bg-white"></div>
+        </div>
       </div>
     </nav>
 
