--- a/index.html
+++ b/index.html
@@ -55,27 +55,30 @@
         <span class="text-2xl font-bold">Portfolio</span>
       </a>
 
-   <!-- Menu -->
-<ul
-  id="menu"
+      <!-- Menu -->
+      <ul id="menu"
   class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent 
-         w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 
-         py-4 md:py-0 transition-all duration-300 ease-in-out"
->
+  w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 
+  py-4 md:py-0 transition-all duration-300 ease-in-out">
+
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
-    <a href="#homepage">Homepage</a>
+    <a href="index.html#homepage">Homepage</a>
   </li>
+
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
     <a href="about-us.html">About</a>
   </li>
+
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
-    <a href="#services">Services</a>
+    <a href="index.html#services">Services</a>
   </li>
+
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
-    <a href="#works">Works</a>
+    <a href="works.html">Works</a>
   </li>
+
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
-    <a href="#contact">Contact</a>
+    <a href="index.html#contact">Contact</a>
   </li>
 </ul>
 
@@ -156,69 +159,27 @@
       </div>
     </div>
   </section> <!-- Portfolio Section (Works) -->
-  <section id="works" class="py-20 px-10">
-    <div class="container mx-auto text-center mb-10">
-      <h1 class="text-indigo-600 font-bold">PORTFOLIO</h1>
-      <h2 class="text-3xl font-bold">Works & Projects</h2>
-      <p class="w-full md:w-1/2 mx-auto text-white font-semibold text-lg" style="background-color: #1f2937;"> I
-        specialize in creating interactive websites for individuals and small businesses. </p>
+
+  <!-- Contact Section -->
+  <!-- Contact Section -->
+  <section id="contact" class="py-20 px-10">
+    <div class="container mx-auto text-center">
+      <h1 class="text-indigo-600 font-bold">CONTACT</h1>
+      <h2 class="text-3xl font-bold">Have a Question?</h2>
+      <p class="w-full md:w-1/2 mx-auto text-gray-500"> Do you have an idea? Let's discuss it and see what we can do
+        together. </p>
     </div>
-    <section>
-      <h2 class="text-3xl font-bold text-center mt-8 mb-4">My Projects</h2>
-      <div class="flex flex-wrap justify-center gap-6 p-5"> <!-- Project 1 Card -->
-        <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col"> <img
-            class="w-full h-64 object-cover rounded-lg" src="./images/works 2.png" alt="Project 1" />
-          <div class="mt-4 text-center flex-grow">
-            <h3 class="font-semibold text-xl text-gray-800">Community Dashboard Website</h3>
-          </div> <a href="https://community-dashboard-three.vercel.app/" target="_blank" rel="noopener noreferrer"
-            class="mt-4 block w-full bg-blue-500 text-white text-center py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors">
-            View Project </a>
-        </div> <!-- Project 2 Card -->
-        <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col"> <img
-            class="w-full h-64 object-cover rounded-lg" src="./images/work 4.png" alt="Project 2" />
-          <div class="mt-4 text-center flex-grow">
-            <h3 class="font-semibold text-xl text-gray-800">Packers and Movers Website</h3>
-          </div> <a href="https://github.com/Moses361/PAM" target="_blank" rel="noopener noreferrer"
-            class="mt-4 block w-full bg-blue-500 text-white text-center py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors">
-            View Project </a>
-        </div> <!-- Project 3 Card -->
-        <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col"> <img
-            class="w-full h-64 object-cover rounded-lg" src="./images/portfolio 1.png" alt="Project 3" />
-          <div class="mt-4 text-center flex-grow">
-            <h3 class="font-semibold text-xl text-gray-800">My Portfolio Work</h3>
-          </div> <a href="https://tailwindcss-six-alpha.vercel.app/" target="_blank" rel="noopener noreferrer"
-            class="mt-4 block w-full bg-blue-500 text-white text-center py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors">
-            View Project </a>
-        </div> <!-- Project 4 Card -->
-        <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col"> <img
-            class="w-full h-64 object-cover rounded-lg" src="./images/project 3.png" alt="Project 4" />
-          <div class="mt-4 text-center flex-grow">
-            <h3 class="font-semibold text-xl text-gray-800">Luxury Tours Website</h3>
-          </div> <a href="https://luxury-tours-main-3v5l.vercel.app/" target="_blank" rel="noopener noreferrer"
-            class="mt-4 block w-full bg-blue-500 text-white text-center py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors">
-            View Project </a>
-        </div>
-      </div>
-    </section>
-    <!-- Contact Section -->
-    <!-- Contact Section -->
-    <section id="contact" class="py-20 px-10">
-      <div class="container mx-auto text-center">
-        <h1 class="text-indigo-600 font-bold">CONTACT</h1>
-        <h2 class="text-3xl font-bold">Have a Question?</h2>
-        <p class="w-full md:w-1/2 mx-auto text-gray-500"> Do you have an idea? Let's discuss it and see what we can do
-          together. </p>
-      </div>
-      <form class="mt-8 p-8 flex flex-col gap-5 items-center max-w-7xl mx-auto bg-white rounded-lg shadow-md"> <input
-          class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="text" placeholder="Name Surname" /> <input
-          class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="email" placeholder="Email" /> <textarea
-          class="p-3 w-full ring-1 ring-indigo-300 rounded-md" rows="5" placeholder="Message..."></textarea> <button
-          class="bg-indigo-600 text-white text-lg px-6 py-2 rounded-md font-semibold w-fit cursor-pointer hover:bg-indigo-700"
-          type="submit"> Send Message </button> </form>
-          <!-- ✅ Footer -->
+    <form class="mt-8 p-8 flex flex-col gap-5 items-center max-w-7xl mx-auto bg-white rounded-lg shadow-md"> <input
+        class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="text" placeholder="Name Surname" /> <input
+        class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="email" placeholder="Email" /> <textarea
+        class="p-3 w-full ring-1 ring-indigo-300 rounded-md" rows="5" placeholder="Message..."></textarea> <button
+        class="bg-indigo-600 text-white text-lg px-6 py-2 rounded-md font-semibold w-fit cursor-pointer hover:bg-indigo-700"
+        type="submit"> Send Message </button> </form>
+    <!-- ✅ Footer -->
     <footer class="bg-indigo-700 text-white py-6 text-center mt-20">
       <p>&copy; 2025 Moses Odhiambo. All rights reserved.</p>
     </footer>
-      <script src="./app.js"></script>
+    <script src="./app.js"></script>
 </body>
+
 </html>
