--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
         visibility: hidden;
       }
     }
+    #hamburger.open div:nth-child(1) {
+  transform: rotate(45deg) translateY(7px);
+}
+#hamburger.open div:nth-child(2) {
+  opacity: 0;
+}
+#hamburger.open div:nth-child(3) {
+  transform: rotate(-45deg) translateY(-7px);
+}
+#hamburger div {
+  transition: all 0.3s ease;
+}
+
   </style>
 </head>
 
@@ -159,6 +172,153 @@
       </div>
     </div>
   </section> <!-- Portfolio Section (Works) -->
+
+   <!-- Works / Portfolio Section -->
+<section id="works" class="bg-gray-50 py-20 px-10 dark:bg-gray-900 dark:text-gray-100">
+  <div class="container mx-auto text-center mb-10">
+    <h1 class="text-indigo-600 font-bold uppercase">Portfolio</h1>
+    <h2 class="text-3xl font-bold mt-2">Recent Projects</h2>
+    <p class="w-full md:w-1/2 mx-auto text-gray-500 dark:text-gray-300 mt-3">
+      A few of my featured projects showcasing my work in design, development,
+      and user experience.
+    </p>
+  </div>
+
+  <!-- Works Grid -->
+  <div class="flex flex-col md:flex-row flex-wrap justify-center items-stretch gap-8 mt-10">
+    
+    <!-- Project 1 -->
+    <div class="bg-white dark:bg-gray-800 shadow-lg rounded-2xl overflow-hidden w-full md:w-5/12">
+      <img
+        src="./images/works 2.png"
+        alt="Community Dashboard Website"
+        class="w-full h-56 object-cover"
+      />
+      <div class="p-6 text-left">
+        <h3 class="text-xl font-semibold text-indigo-700 dark:text-indigo-400">
+          Community Dashboard Website
+        </h3>
+        <p class="text-gray-600 dark:text-gray-300 mt-2 text-sm leading-relaxed">
+          A fully responsive community dashboard built with React and TailwindCSS
+          for data visualization and content management.
+        </p>
+        <a
+          href="https://community-dashboard-three.vercel.app/"
+          target="_blank"
+          class="inline-block mt-4 text-indigo-600 font-semibold hover:text-indigo-800"
+        >
+          View Project →
+        </a>
+      </div>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="bg-white dark:bg-gray-800 shadow-lg rounded-2xl overflow-hidden w-full md:w-5/12">
+      <img
+        src="./images/work 4.png"
+        alt="Packers and Movers Website"
+        class="w-full h-56 object-cover"
+      />
+      <div class="p-6 text-left">
+        <h3 class="text-xl font-semibold text-indigo-700 dark:text-indigo-400">
+          Packers and Movers Website
+        </h3>
+        <p class="text-gray-600 dark:text-gray-300 mt-2 text-sm leading-relaxed">
+          A sleek, mobile-first website for a logistics company. Built with
+          HTML, Tailwind CSS, and JavaScript for fast, seamless interaction.
+        </p>
+        <a
+          href="https://github.com/Moses361/PAM"
+          target="_blank"
+          class="inline-block mt-4 text-indigo-600 font-semibold hover:text-indigo-800"
+        >
+          View Project →
+        </a>
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="bg-white dark:bg-gray-800 shadow-lg rounded-2xl overflow-hidden w-full md:w-5/12">
+      <img
+        src="./images/portfolio 1.png"
+        alt="My Portfolio Work"
+        class="w-full h-56 object-cover"
+      />
+      <div class="p-6 text-left">
+        <h3 class="text-xl font-semibold text-indigo-700 dark:text-indigo-400">
+          My Portfolio Website
+        </h3>
+        <p class="text-gray-600 dark:text-gray-300 mt-2 text-sm leading-relaxed">
+          My personal portfolio showcasing various web projects, design styles,
+          and development techniques — built with TailwindCSS and Vite.
+        </p>
+        <a
+          href="https://tailwindcss-six-alpha.vercel.app/"
+          target="_blank"
+          class="inline-block mt-4 text-indigo-600 font-semibold hover:text-indigo-800"
+        >
+          View Project →
+        </a>
+      </div>
+    </div>
+
+    <!-- Project 4 -->
+    <div class="bg-white dark:bg-gray-800 shadow-lg rounded-2xl overflow-hidden w-full md:w-5/12">
+      <img
+        src="./images/project 3.png"
+        alt="Luxury Tours Website"
+        class="w-full h-56 object-cover"
+      />
+      <div class="p-6 text-left">
+        <h3 class="text-xl font-semibold text-indigo-700 dark:text-indigo-400">
+          Luxury Tours Website
+        </h3>
+        <p class="text-gray-600 dark:text-gray-300 mt-2 text-sm leading-relaxed">
+          A modern travel and tours platform highlighting luxury vacation
+          experiences. Designed with responsive layouts and hosted on Vercel.
+        </p>
+        <a
+          href="https://luxury-tours-main-3v5l.vercel.app/"
+          target="_blank"
+          class="inline-block mt-4 text-indigo-600 font-semibold hover:text-indigo-800"
+        >
+          View Project →
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+    <!-- View All Button -->
+    <div class="text-center mt-12">
+      <a
+        href="works.html"
+        class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-full font-semibold text-lg hover:bg-indigo-700 transition"
+      >
+        View All Works
+      </a>
+    </div>
+  </section>
+
+  <!-- Call to Action: View My Projects -->
+<section class="bg-indigo-700 text-white py-20 px-6 text-center">
+  <div class="max-w-3xl mx-auto">
+    <h2 class="text-3xl md:text-4xl font-bold mb-4">
+      Want to see my latest projects?
+    </h2>
+    <p class="text-lg text-indigo-200 mb-8">
+      Explore a collection of my web design and development work — from business
+      websites to creative digital experiences.
+    </p>
+    <a
+      href="works.html"
+      class="inline-block bg-white text-indigo-700 font-semibold text-lg px-8 py-3 rounded-full shadow-md hover:bg-indigo-100 transition"
+    >
+      View My Projects
+    </a>
+  </div>
+</section>
+
 
   <!-- Contact Section -->
   <!-- Contact Section -->
