--- a/works.html
+++ b/works.html
@@ -13,12 +13,25 @@
       body {
         font-family: "Nunito", sans-serif;
       }
+
+      /* 🔹 Hamburger animation */
+      #hamburger div {
+        transition: all 0.3s ease;
+      }
+      #hamburger.open div:nth-child(1) {
+        transform: rotate(45deg) translateY(7px);
+      }
+      #hamburger.open div:nth-child(2) {
+        opacity: 0;
+      }
+      #hamburger.open div:nth-child(3) {
+        transform: rotate(-45deg) translateY(-7px);
+      }
     </style>
   </head>
 
   <body class="bg-gray-50 text-gray-900">
-    <!-- Navbar -->
-    <!-- Navbar -->
+    <!-- ✅ Navbar -->
     <nav class="w-full bg-indigo-700 shadow-lg fixed top-0 left-0 z-50">
       <div
         class="container mx-auto py-5 flex justify-between items-center px-4 text-white"
@@ -39,7 +52,7 @@
         <!-- Menu -->
         <ul
           id="menu"
-          class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 py-4 md:py-0 transition-all duration-300 ease-in-out"
+          class="hidden flex-col md:flex md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 py-4 md:py-0 transition-all duration-300 ease-in-out"
         >
           <li
             class="hLink hover:text-indigo-200 transition-colors duration-200"
@@ -86,6 +99,7 @@
       </div>
     </nav>
 
+    <!-- ✅ Main Content -->
     <main class="pt-28 pb-20 container mx-auto px-6">
       <!-- Intro -->
       <section class="text-center mb-16">
@@ -118,9 +132,8 @@
               href="https://community-dashboard-three.vercel.app/"
               target="_blank"
               class="inline-block bg-blue-500 text-white px-6 py-2 rounded-lg hover:bg-blue-600 transition"
+              >View Project</a
             >
-              View Project
-            </a>
           </div>
         </div>
 
@@ -144,9 +157,8 @@
               href="https://github.com/Moses361/PAM"
               target="_blank"
               class="inline-block bg-blue-500 text-white px-6 py-2 rounded-lg hover:bg-blue-600 transition"
+              >View Project</a
             >
-              View Project
-            </a>
           </div>
         </div>
 
@@ -170,9 +182,8 @@
               href="https://tailwindcss-six-alpha.vercel.app/"
               target="_blank"
               class="inline-block bg-blue-500 text-white px-6 py-2 rounded-lg hover:bg-blue-600 transition"
+              >View Project</a
             >
-              View Project
-            </a>
           </div>
         </div>
 
@@ -196,9 +207,8 @@
               href="https://luxury-tours-main-3v5l.vercel.app/"
               target="_blank"
               class="inline-block bg-blue-500 text-white px-6 py-2 rounded-lg hover:bg-blue-600 transition"
+              >View Project</a
             >
-              View Project
-            </a>
           </div>
         </div>
       </section>
